[explorer/frontend] fix: multisig tree overflow on account page

--- a/explorer/frontend/styles/globals.scss
+++ b/explorer/frontend/styles/globals.scss
@@ -91,6 +91,10 @@ a {
     overflow: hidden;
 }
 
+.overflow-x-auto {
+    overflow-x: auto;
+}
+
 .layout-flex-fill {
     flex: 1;
 }
